...
    notNearbyAnymore: "{{firstName}} ist nicht mehr in der Nähe.",
    canStillSendMessage:
        "Du kannst {{firstName}} trotzdem eine Nachricht schicken.",
    willNotifyAgainIn24h:
        "Wir geben dir nach 24h wieder Bescheid falls {{firstName}} wieder in der Nähe ist.",
    createAccount: "Registrieren",
    signIn: "Anmelden",
    userCount: "{{count}} User aktiv",
    encounterCount: "{{count}} User getroffen",
    bestChanceApproachTime: "Beste Chancen: {{startTime}}-{{endTime}} Uhr",
    bestChanceApproachTimeDescription:
        "Sei zu diesen Zeiten an den Hotspots, um deine Chancen Jemanden zu treffen drastisch zu erhöhen.",
    encounterCountDescription:
        "So vielen Usern bist du bereits über den Weg gelaufen. Wechsle zum Tab 'Begegnungen', um sie zu sehen.",
    userCountDescription:
        "So viele User sind in deiner Umgebung auf Offlinery. Aktive Nutzer die zu dir passen werden auf der Map angezeigt.",
    invalidCredentials: "E-Mail oder Passwort falsch.",
    signingIn: "Einen Moment..",
    youMetHere: "bist du hier über den Weg gelaufen.",
    loadingHeatmap: "Lade Heatmap..",
...
    verify: "Bestätigen",
    verificationCodeSent:
        "Der 6-stellige Code, den wir dir per E-Mail gesendet haben",
    myFirstNameIs: "Mein Vorname ist",
    myFirstNameDescr: "So wirst du in Offlinery angezeigt.",
    enterFirstName: "Vornamen eingeben",
    woman: "Frau",
    women: "Frauen",
    man: "Mann",
    men: "Männer",
    more: "Mehr",
    iAmA: "Ich bin ein(e)",
    casual: "Nichts Ernstes",
    casualDescription:
        "Offen für was Lockeres. Bitte beachte, dass dies keine offene Einladung ist - bleib respektvoll und taste dich langsam voran.",
...
    noUserIdAssignedCannotListenToNotifications:
        "Kein Benutzer-ID zugewiesen! Kann keine Benachrichtigungen empfangen!",
    couldNotFetchNotificationToken:
        "Benachrichtigungstoken konnte nicht abgerufen werden",
    permissionNotificationRejected:
        "Benachrichtungen abgelehnt. Ohne deine Erlaubnis können wir dich nicht über neue Begegnungen benachrichtigen.",
    findPeople: "Finden",
    encounters: "Begegnungen",
    settings: "Einstellungen",
    yourProfile: "Dein Profil",
    settingsError: "Konnte Einstellungen nicht speichern.",
    settingsSuccess: "Einstellungen gespeichert.",
    destination: "Ziel",
...
    describeIncident: "Beschreibe den Vorfall / Fehlverhalten",
    keepMeInTheLoopEmail: "Bitte halte mich per E-Mail auf dem Laufenden.",
    reportNow: "Jetzt melden",
    calendlySchedulingPageDefault: "Calendly Terminseite",
    encounterInterest: {
        notMet: "Nicht getroffen",
        metNotInterested: "Getroffen, nicht interessiert",
        metInterested: "Getroffen, interessiert",
    },
    ratingDescr:
        "Je höher, desto vertrauenswürdiger ist die Person (5 = am besten).",
    trust: "Vertrauen",
    report: "Melden",
...
    ghostMode: "Geistmodus",
    saving: "Speichern..",
    enterMessage: "Nachricht oder Kontaktdetails eingeben..",
    sendMessage: "Senden",
    receivedMessage: "Letzte Nachricht",
    leaveMessage: "Nachricht schreiben",
    leaveMessageBtnLbl: "Kontakt",
    messageWarning: "{{firstName}} sieht nur deine letzte Nachricht.",
    messageUnableToSend: "Nachricht kann nicht gesendet werden.",
    dangerZone: "Gefahren-Zone",
    logout: "Logout",
    deleteAccount: "Account löschen",
    deletionRequested: "Löschung beantragt",
...
