...
            subtitle={i18n.t(TR.peopleYouMightHaveMet)}
            doNotUseScrollView={true}
        >
            <View style={styles.container}>
                <View style={styles.dateRangeContainer}>
                    <View style={styles.dateContainer}>
                        <Text style={styles.dateLabel}>From</Text>
                        <ODateTimePicker
                            display="default"
                            mode="date"
                            style={styles.iosDatePicker}
                            onChange={onMetStartDateFilterChange}
                            accessibilityLabel={i18n.t(TR.weMetFrom)}
...
                            dateTimeFormatter={EDateTimeFormatters.DATE}
                            androidTextStyle={styles.androidDateButton}
                            maximumDate={metEndDateFilter}
                        />
                    </View>
                    <View style={styles.dateContainer}>
                        <Text style={styles.dateLabel}>To</Text>
                        <ODateTimePicker
                            display="default"
                            mode="date"
                            style={styles.iosDatePicker}
                            onChange={onMetEndDateFilterChange}
                            accessibilityLabel={i18n.t(TR.toThisDate)}
...
