appId: io.wavect.offlinery

---

- launchApp


# Check if we're on the login screen
- runFlow:
    when:
      visible: "Anmelden"
    commands:
      - assertVisible: "Anmelden"
      - tapOn: "Anmelden"
      - tapOn: "Anmelden"
      - assertVisible: "Erlauben"
      - tapOn: "Erlauben"

# System Permissions
- runFlow:
        when:
              visible: "möchte auf Ihren Standort zugreifen"
        commands:
              - tapOn: "Erlauben"

# Verify successful login or already logged in state
- assertVisible: "Finden"

#
# Settings Page
#
- tapOn:
    id: "tab-settings"
- tapOn:
    id: "input-i-am-a"
- assertVisible: "Frau"
- assertVisible: "Mann"
- tapOn: "Frau"
- tapOn:
    id: "input-i-am-looking-for"
- assertVisible: "Frau"
- assertVisible: "Mann"
- tapOn: "Frau"
- tapOn:
    id: "button-save"

#
# ENcounters Page
#
- tapOn:
    id: "tab-encounters"

- assertVisible: "Begegnungen"
- assertVisible: "From"
- assertVisible: "To"
- assertVisible: "Jane, 34"
- assertVisible: "Kontakt"

- tapOn:
    id: "input-update-status"
- assertVisible: "Getroffen, nicht interessiert"