appId: io.wavect.offlinery
---
- launchApp
- runFlow: main.e2e.yaml
- tapOn:
    id: "tab-settings"
- tapOn:
    id: "input-i-am-a"
- assertVisible: "Frau"
- assertVisible: "Mann"


- tapOn: "Frau"
- tapOn:
    id: "input-i-am-looking-for"
- assertVisible: "Frau"
- assertVisible: "Mann"
- tapOn: "Frau"
- tapOn:
    id: "button-save"
